# Steppable

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .yamlfmt.yml  CMakeLists.txt  CMakeSettings.json  CNAME  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  Doxyfile  Folder.DotSettings  LICENSE  README.md  README_8md.html  SECURITY.md  SECURITY_8md.html  Steppable.DotSettings  Steppable.sln  Steppable.sln.DotSettings  Steppable.sublime-project  __init__.py  _formulas.tex  absReport_8cpp.html  absReport_8cpp.js  absReport_8cpp__incl.map  absReport_8cpp__incl.md5  absReport_8cpp_a7e44e3e84696a88d84e6d9e3331ea6a3_cgraph.map  absReport_8cpp_a7e44e3e84696a88d84e6d9e3331ea6a3_cgraph.md5  absReport_8cpp_a7e44e3e84696a88d84e6d9e3331ea6a3_icgraph.map  absReport_8cpp_a7e44e3e84696a88d84e6d9e3331ea6a3_icgraph.md5  absReport_8hpp.html  absReport_8hpp.js  absReport_8hpp__dep__incl.map  (+8228 more)
gui/: CMakeLists.txt  appState.cpp  guiUtils.cpp  main.cpp  test.cpp
gui/impl/: gui.cpp  window.cpp
gui/include/: appState.hpp  fontMgr.hpp  guiUtils.hpp  node.hpp
gui/include/fonts/: codeicon.hpp  codeiconGlyphs.hpp
include/: CMakeLists.txt  argParse.hpp  colors.hpp  constants.hpp  debugging.hpp  exceptions.hpp  expression.hpp  factors.hpp  format.hpp  fraction.hpp  getString.hpp  gui.hpp  internals.hpp  invokeCommand.hpp  logging.hpp  number.hpp  output.hpp  platform.hpp  rounding.hpp  symbols.hpp  testing.hpp  util.hpp
include/conPlot/: conPlot.hpp  conPlotInternals.hpp  conPlotInterpolation.hpp  conPlotTypes.hpp
include/fn/: basicArithm.hpp  calc.hpp  calculus.hpp  root.hpp
include/steppable/: fraction.hpp  mat2d.hpp  mat2dBase.hpp  mat2dConstexpr.hpp  mat2dSpecial.hpp  number.hpp  parameter.hpp
include/types/: concepts.hpp  data.hpp  point.hpp  result.hpp  rounding.hpp
lib/: CMakeLists.txt  bindings.cpp  constants.py  getch.py  paths.py  printing.py  test.py
lib/bindings/: bindingsFraction.hpp  bindingsMat2d.hpp  bindingsNumber.hpp
lib/bindings/fn/: bindingsCalc.hpp
src/: CMakeLists.txt  argParse.cpp  colors.cpp  constants.cpp  expression.cpp  factors.cpp  format.cpp  fraction.cpp  getString.cpp  invokeCommand.cpp  logging.cpp  main.cpp  number.cpp  platform.cpp  rounding.cpp  symbols.cpp  testing.cpp  util.cpp
src/abs/: abs.cpp  abs.vcxproj  abs.vcxproj.filters  absReport.cpp  absReport.hpp
src/add/: add.cpp  add.vcxproj  add.vcxproj.filters  addReport.cpp  addReport.hpp
src/base/baseConvert/: baseConvert.cpp  baseConvert.vcxproj  baseConvert.vcxproj.filters  baseConvertReport.cpp  baseConvertReport.hpp
src/base/decimalConvert/: decimalConvert.cpp  decimalConvert.vcxproj  decimalConvert.vcxproj.filters  decimalConvertReport.cpp  decimalConvertReport.hpp
src/baseConvert/: baseConvert.cpp  baseConvert.vcxproj  baseConvert.vcxproj.filters  baseConvertReport.cpp  baseConvertReport.hpp
src/calc/abs/: abs.cpp  abs.vcxproj  abs.vcxproj.filters  absReport.cpp  absReport.hpp
src/calc/add/: add.cpp  add.vcxproj  add.vcxproj.filters  addReport.cpp  addReport.hpp
src/calc/atan2/: atan2.cpp  atan2Report.cpp  atan2Report.hpp
src/calc/comparison/: comparison.cpp  comparison.vcxproj  comparison.vcxproj.filters  comparisonReport.cpp  comparisonReport.hpp
src/calc/division/: division.cpp  division.vcxproj  division.vcxproj.filters  divisionReport.cpp  divisionReport.hpp
src/calc/factorial/: factorial.cpp  factorial.vcxproj  factorial.vcxproj.filters  factorialReport.cpp  factorialReport.hpp
src/calc/hyp/: hyp.cpp  hypReport.cpp  hypReport.hpp
src/comparison/: .comparisonReport.cpp.swp  comparison.cpp  comparison.vcxproj  comparison.vcxproj.filters  comparisonReport.cpp  comparisonReport.hpp
src/conPlot/: CMakeLists.txt  conPlot.cpp  conPlotInternals.cpp  conPlotInterpolation.cpp
src/decimalConvert/: decimalConvert.cpp  decimalConvert.vcxproj  decimalConvert.vcxproj.filters  decimalConvertReport.cpp  decimalConvertReport.hpp
src/division/: division.cpp  division.vcxproj  division.vcxproj.filters  divisionReport.cpp  divisionReport.hpp
src/factorial/: factorial.cpp  factorialReport.cpp
src/gui/: guiBase.cpp
src/hyp/: hyp.cpp
src/log/: log.cpp  logReport.cpp
src/main/: main.cpp
src/multiply/: multiply.cpp  multiply.vcxproj  multiply.vcxproj.filters  multiplyReport.cpp  multiplyReport.hpp
src/power/: power.cpp  power.vcxproj  power.vcxproj.filters  powerReport.cpp  powerReport.hpp
src/root/: root.cpp  root.vcxproj  root.vcxproj.filters  rootReport.cpp  rootReport.hpp
src/steppable/: fraction.cpp  mat2d.cpp  mat2dBase.cpp  mat2dSpecial.cpp  number.cpp  parameter.cpp
src/subtract/: subtract.cpp  subtract.vcxproj  subtract.vcxproj.filters  subtractReport.cpp  subtractReport.hpp
src/trig/: trig.cpp  trigReport.cpp  trigReport.hpp
tests/: CMakeLists.txt  testAbs.cpp  testAbs.vcxproj  testAdd.cpp  testAdd.vcxproj  testAtan2.cpp  testBaseConvert.cpp  testBaseConvert.vcxproj  testComparison.cpp  testComparison.vcxproj  testDecimalConvert.cpp  testDecimalConvert.vcxproj  testDivision.cpp  testDivision.vcxproj  testExpression.cpp  testFactorial.cpp  testFactors.cpp  testFactors.vcxproj  testFormat.cpp  testFraction.cpp  testHyp.cpp  testLog.cpp  testMat2d.cpp  testMultiply.cpp  testMultiply.vcxproj  testNInt.cpp  testNumber.cpp  testPower.cpp  testPower.vcxproj  testRoot.cpp  testRoot.vcxproj  testSubtract.cpp  testSubtract.vcxproj  testTrig.cpp  testTrig.vcxproj  testUtil.cpp  testUtil.vcxproj
tests/random_tests/: __init__.py  random_test_base.py  run_tests.py  test_add.py  test_division.py  test_multiply.py  test_subtract.py
tests/testBase/: testBaseConvert.vcxproj  testDecimalConvert.cpp  testDecimalConvert.vcxproj
tests/testCalc/: testAbs.cpp  testAbs.vcxproj  testAdd.vcxproj  testComparison.cpp  testComparison.vcxproj  testDivision.vcxproj  testMultiply.cpp  testMultiply.vcxproj  testPower.cpp  testPower.vcxproj  testSubtract.cpp  testSubtract.vcxproj  testTrig.cpp
tests/testCalculus/: testNInt.cpp
tests/testSteppable/: testMat2d.cpp  testUtil.cpp
(+365 files in other folders)
