[project]
name = "steppable"
version = "0.0.1"
description = "A CAS built from scratch."
authors = [
    { name = "Andy Zhang", email = "andy@nwsoft.tech" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"

dynamic = ["classifiers", "optional-dependencies"]

dependencies = [
    "matplotlib >= 3.9.0",
    "black >= 24.4.2",
    "isort >= 5.13.2",
    "setuptools >= 61.0",
    "nanobind >= 1.9.2",
    "pyyaml >= 6.0.1",
]

[build-system]
requires = ["setuptools >= 61.0", "nanobind >= 1.9.2"]
build-backend = "setuptools.build_meta"
