FUNCTION(ADD_GUI SOURCE)
    GET_FILENAME_COMPONENT(NAME ${SOURCE} NAME_WE)
    SET(NAME "gui_${NAME}")
    
    ADD_EXECUTABLE(${NAME} ${SOURCE})
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE imgui)
    TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
    TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE "${STP_BASE_DIRECTORY}/include/imgui")

    # Link Steppable stuff
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE calc impl)
    TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE ${STP_BASE_DIRECTORY}/include)

    if(FREETYPE_FOUND)
        TARGET_LINK_LIBRARIES(${NAME} PRIVATE ${FREETYPE_LIBRARIES})
        TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE ${FREETYPE_INCLUDE_DIRS})
        TARGET_COMPILE_DEFINITIONS(${NAME} PRIVATE IMGUI_ENABLE_FREETYPE)
        TARGET_LINK_LIBRARIES(${NAME} PRIVATE imgui_freetype)
    endif()
ENDFUNCTION()

IF (STP_BUILD_GUI EQUAL 1)
    # Find and link SDL2 and OpenGL
    FIND_PACKAGE(SDL2 REQUIRED)
    FIND_PACKAGE(OpenGL REQUIRED)
    ADD_LIBRARY(impl STATIC impl/gui.cpp impl/window.cpp)
    TARGET_LINK_LIBRARIES(impl PRIVATE ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES} imgui)
    TARGET_INCLUDE_DIRECTORIES(impl PRIVATE
                               ${SDL2_INCLUDE_DIRS}
                               "${STP_BASE_DIRECTORY}/include/imgui"
                               "${STP_BASE_DIRECTORY}/include")

    ADD_GUI(test.cpp)
ENDIF()
